@@ -1,3 +1,8 @@
+2008-11-03	Till Straumann <strauman@slac.stanford.edu>
+
+	PR 1332: call BSP_uart_termios_set()/BSP_uart_intr_ctrl()
+	only from 'firstOpen' and only if this is a serial console.
+
 2008-03-04	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* shared/startup/linkcmds: Add wildcard to gcc_except_table section so
